<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>

        <TextView
            android:id="@+id/text1_forward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/textBackground"
            android:gravity="start"
            android:text="@string/text1_forward"
            android:textColor="@color/textColor"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/text1"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/textBackground"
            android:gravity="end"
            android:textColor="@color/textColor"
            android:textSize="40sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/text2_forward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/textBackground"
            android:gravity="start"
            android:text="@string/text2_forward"
            android:textColor="@color/textColor"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/text2"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/textBackground"
            android:gravity="end"
            android:textColor="@color/textColor"
            android:textSize="40sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/text_x_forward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/dark"
            android:gravity="start|center"
            android:text="@string/text_x_forward"
            android:textColor="@color/textColor"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/text_x"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/dark"
            android:gravity="end"
            android:textColor="@color/textColor"
            android:textSize="40sp" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/text_y_forward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/dark"
            android:gravity="start|center"
            android:text="@string/text_y_forward"
            android:textColor="@color/textColor"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/text_y"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/dark"
            android:gravity="end"
            android:textColor="@color/textColor"
            android:textSize="40sp" />
    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/BT1"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/BT1"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT2"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT2"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT3"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT3"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT4"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/BT4"
            android:textSize="40sp" />

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/BT5"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/BT5"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT6"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/BT6"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT7"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/BT7"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT8"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="@string/BT8"
            android:textSize="40sp" />

    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/BT9"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT9"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT0"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT_x"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/BTx"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT_y"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/BTy"
            android:textSize="40sp" />


    </TableRow>

    <TableRow>

        <Button
            android:id="@+id/BT_add"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT_add"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT_reduce"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT_reduce"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT_divide"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT_divide"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT_times"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT_times"
            android:textSize="40sp" />

        <Button
            android:id="@+id/BT_equals"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/BT_equals"
            android:textColor="@color/textColor"
            android:textSize="40sp" />

    </TableRow>


</TableLayout>